# human_detect_module

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  dockerfile.base  dockerfile.dev  dockerfile.prod  pyproject.toml  requirements.txt
src/human_detect_module/: main.py
src/human_detect_module/containers/: module_container.py
src/human_detect_module/controller/: module_manage_controller.py
src/human_detect_module/dto/kafka/consumer/: change_human_detect_data_dto.py  human_detect_config_dto.py  post_apc_log_dto.py
src/human_detect_module/dto/kafka/producer/: saved_apc_frame_dto.py
src/human_detect_module/dto/module_manage/: roi_dto.py  roi_points_dto.py
src/human_detect_module/dto/module_manage/request/: request_module_manage_dto.py  request_put_config_dto.py
src/human_detect_module/dto/module_manage/response/: response_module_manage_dto.py  response_module_manage_list_dto.py
src/human_detect_module/dto/socket/: result_dto.py
src/human_detect_module/module/: frame_reader.py  human_detect_module.py  human_detector.py  socket_client.py  visualizer.py  webrtc_publisher.py
src/human_detect_module/service/: kafka_consumer.py  kafka_service.py  module_manage_service.py  socket_service.py
tests/: __init__.py
